--- a/app/src/main/res/layout/create_event.xml
+++ b/app/src/main/res/layout/create_event.xml
@@ -22,6 +22,7 @@
         />
 
     <Button
+        android:id="@+id/createEventButton"
         android:layout_marginTop="20dp"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -32,6 +33,8 @@
         android:textStyle="bold"
         android:background="#F12345"
         android:fontFamily="sans-serif"
+
+        android:onClick="createEvent"
         />
 
     <View
