--- a/app/src/main/res/layout/join_group.xml
+++ b/app/src/main/res/layout/join_group.xml
@@ -21,6 +21,7 @@
         />
 
     <EditText
+        android:id="@+id/joinGroupPass"
         android:layout_marginTop="20dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -35,6 +36,18 @@
         android:textSize="50dp"
         />
 
+    <TextView
+        android:id="@+id/joinGroupHint"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="20dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:textColor="#FF0000"
+        />
+
     <Button
         android:layout_marginTop="20dp"
         android:layout_width="200dp"
@@ -46,6 +59,8 @@
         android:textStyle="bold"
         android:background="#F12345"
         android:fontFamily="sans-serif"
+
+        android:onClick="joinGroupOk"
         />
 
 </LinearLayout>
