--- a/app/src/main/res/layout/upcoming_event.xml
+++ b/app/src/main/res/layout/upcoming_event.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
 
-        android:text="Discover events nearby."
+        android:text="Boring? Try create event and make impact!"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:textSize="20dp"
@@ -22,16 +22,19 @@
         />
 
     <Button
+        android:id="@+id/createEventButton"
         android:layout_marginTop="20dp"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
 
-        android:text="Refresh"
+        android:text="Create Event"
         android:textStyle="bold"
         android:background="#F12345"
         android:fontFamily="sans-serif"
+
+        android:onClick="createEvent"
         />
 
     <View
@@ -46,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
 
-        android:text="Nearby Events"
+        android:text="Upcoming Events"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:textSize="30dp"
@@ -63,7 +66,7 @@
         card_view:cardElevation="@dimen/event_list_card_elevation"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:id="@+id/cardViewNearby">
+        android:id="@+id/cardViewEvent">
 
         <!-- Main Content View -->
         <LinearLayout
@@ -138,13 +141,9 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
     <ListView
-        android:id="@+id/exploreList"
+        android:id="@+id/upcomingEventList"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
     </ListView>
-
-
-
 </LinearLayout>
