--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,8 @@
     <color name="main_color_gray_lt">#acacac</color>
     <color name="main_color_gray">#7d7d7d</color>
     <color name="gray_light">#e8e8e8</color>
+
+    <color name="grey">#999999</color>
+    <color name="sexy_pink">#E0006C</color>
+    <color name="light_grey">#EEEEEE</color>
 </resources>
