--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -1,69 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+<!--
+profile portrait: profile_portrait
+profile name: profile_name
+-->
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
 
     <edu.cmu.juicymeeting.model.RoundedImageView
-        android:layout_width="150dp" android:layout_height="150dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:src="@mipmap/profile1" android:id="@+id/imageViewProfile" />
+        android:id="@+id/profile_portrait"
+        android:layout_width="@dimen/profile_portrait_size"
+        android:layout_height="@dimen/profile_portrait_size"
+        android:layout_gravity="center"
+        android:scaleType="centerInside"
+        android:src="@drawable/koji"/>
 
-    <TableLayout android:id="@+id/profileTable"
+    <TextView
+        android:id="@+id/profile_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="70dp"
-        android:layout_below="@+id/imageViewProfile">
+        android:layout_gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dip" >
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:text="otnt"/>
 
-            <TextView
-                android:id="@+id/profileUsername"
-                android:text="Juicy Meeting"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"/>
 
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dip" >
-
-            <TextView
-                android:id="@+id/profileEmail"
-                android:text="juicymeeting@juicy.com"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        </TableRow>
-
-    </TableLayout>
-
-    <Button android:id="@+id/editProfile"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
 
-        android:layout_below="@+id/profileTable"
-        android:background="?attr/colorPrimary"
+            android:textStyle="bold"
+            android:gravity="right"
+            android:text="0 Followers"/>
 
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"/>
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/black"/>
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+
+            android:textStyle="bold"
+            android:gravity="left"
+            android:text="0 Following"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"/>
+</LinearLayout>
