--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,7 @@
     <dimen name="event_list_card_text_size">30dp</dimen>
     <dimen name="event_list_card_padding">15dp</dimen>
     <dimen name="event_list_card_portrait_size">40dp</dimen>
+
+    <dimen name="profile_portrait_size">100dp</dimen>
+
 </resources>
