--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -1,62 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/light_grey">
+    android:layout_height="match_parent">
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
-        android:text="Click to attend"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:background="@color/sexy_pink"/>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <edu.cmu.juicymeeting.model.RoundedImageView
+                android:id="@+id/event_list_card_portrait"
+                android:layout_width="@dimen/event_list_card_portrait_size"
+                android:layout_height="@dimen/event_list_card_portrait_size"
+                android:scaleType="centerCrop"
+                android:src="@drawable/coffee_portrait"/>
+
+            <TextView
+                android:id="@+id/event_list_card_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:layout_gravity="center"
+
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/grey"
+                android:text="Good Coffee"/>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/event_list_card_image"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:src="@drawable/coffee"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="false"/>
+
+        <View
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/event_detail_head_image"
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/event_detail_head_image"/>
+                android:layout_height="wrap_content"
+
+                android:textSize="20sp"
+                android:text="Coffee"
+                android:textColor="@color/black"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
-
-                <TextView
-                    android:id="@+id/event_detail_name"
-                    android:text="First Meeting, Juicy!"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-
-                    android:textSize="30dp"
-                    android:textColor="@color/black"/>
-
+                android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/event_detail_date"
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
 
-                    android:text="07/14/2015"
-                    android:textSize="20dp"
-                    android:textColor="@color/black"
+                    android:text="Mountain View"
+                    android:textColor="@color/grey"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+
+                    android:gravity="right"
+                    android:text="2015/11/12"
+                    android:textColor="@color/grey"
                     />
             </LinearLayout>
 
@@ -73,33 +101,16 @@
                 android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/grey"/>
+                android:background="@android:color/darker_gray"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/event_detail_description"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="match_parent"
-                    card_view:cardBackgroundColor="@color/white"
-                    card_view:cardCornerRadius="0dp"
-                    card_view:cardElevation="2dp"
-                    android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/event_detail_description"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                android:layout_width="wrap_content"
 
-                    android:text="Some description.\nSome description.\nSome description.\nSome description.\nSome description.\n"
-                    android:textSize="20dp"
-                    android:textColor="@color/black"
-                    />
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
+                android:text="Some description"
+                android:textSize="20dp"
+                android:textColor="@color/black"/>
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
