--- a/app/src/main/res/layout/group_chat.xml
+++ b/app/src/main/res/layout/group_chat.xml
@@ -1,177 +1,72 @@
+<!--
+event list: group_list
+create group button: group_create
+join group button: group_join
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/intro"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-
-        android:text="Chat with your friends."
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        />
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal">
-        <Button
-            android:layout_marginTop="20dp"
-            android:layout_width="150dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/group_create"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingRight="10dp"
 
             android:text="Create"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:background="#F12345"
-            android:fontFamily="sans-serif"
-            android:id="@+id/createGroupButton"
-
+            android:textColor="@color/black"
+            android:background="@color/transparent"
             android:onClick="createGroup"
             />
 
-        <Button
-            android:layout_marginTop="20dp"
-            android:layout_width="150dp"
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/black"/>
+
+        <TextView
+            android:id="@+id/group_join"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_toRightOf="@+id/createGroupButton"
-            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:paddingLeft="10dp"
 
             android:text="Join"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:background="#F12345"
-            android:fontFamily="sans-serif"
-
+            android:textColor="@color/black"
+            android:background="@color/transparent"
             android:onClick="joinGroup"
             />
-    </RelativeLayout>
+    </LinearLayout>
 
     <View
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"/>
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-
-        android:text="Your Groups"
-        android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        />
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/group_list"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/event_list_card_height"
-        card_view:cardBackgroundColor="@color/white"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="@dimen/event_list_card_elevation"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:id="@+id/cardView">
-
-        <!-- Main Content View -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingRight="20dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical"
-                android:layout_marginTop="5dp">
-                <TextView
-                    android:id="@+id/event_list_card_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:gravity="center_vertical"
-
-                    android:text="First meeting"
-                    android:textSize="30dp"
-                    android:fontFamily="sans-serif"
-                    android:typeface="monospace"
-                    android:textStyle="bold"
-                    android:textColor="@color/black" />
-
-                <TextView
-                    android:id="@+id/event_list_card_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_toRightOf="@id/event_list_card_image"
-                    android:gravity="center_vertical"
-
-                    android:text="Moffett Blvd"
-                    android:textSize="15dp"
-                    android:fontFamily="sans-serif"
-                    android:typeface="monospace"
-                    android:textColor="@color/black" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp">
-                <TextView
-                    android:id="@+id/event_list_card_month_year"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:text="07/2015"
-                    android:textSize="15dp"
-                    android:textColor="@color/black"
-                    android:textAlignment="textEnd"
-                    tools:ignore="RtlCompat,UnusedAttribute" />
-
-                <TextView
-                    android:id="@+id/event_list_card_day"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    android:text="28"
-                    android:textSize="35dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textAlignment="textEnd"
-                    tools:ignore="RtlCompat,UnusedAttribute" />
-                />
-            </LinearLayout>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-
-    <ListView
-        android:id="@+id/groupList"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    </ListView>
-
-
-
-
-
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:scrollbars="vertical" />
 </LinearLayout>
