--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -2,17 +2,17 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
-    android:layout_height="50dp"
-    android:layout_width="200dp">
+    android:layout_height="1dp"
+    android:layout_width="1dp">
 
     <!-- view border color and width -->
     <stroke
-        android:width="2dp"
-        android:color="#000000" >
+        android:width="1dp"
+        android:color="@color/grey" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
     <corners
-        android:radius="2dp"   >
+        android:radius="0dp"   >
     </corners>
 </shape>
