--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -11,9 +11,11 @@ profile name: profile_name
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+    android:paddingRight="20dp"
+    android:layout_marginTop="50dp"
+    android:background="@color/dark_grey">
 
-    <edu.cmu.juicymeeting.model.RoundedImageView
+    <edu.cmu.juicymeeting.model.RImageView
         android:id="@+id/profile_portrait"
         android:layout_width="@dimen/profile_portrait_size"
         android:layout_height="@dimen/profile_portrait_size"
@@ -32,12 +34,13 @@ profile name: profile_name
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         android:text="otnt"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"/>
+        android:background="@color/grey"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,13 +55,14 @@ profile name: profile_name
             android:paddingRight="10dp"
 
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:gravity="right"
             android:text="0 Followers"/>
 
         <TextView
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/black"/>
+            android:background="@color/grey"/>
 
         <TextView
             android:layout_width="0dp"
@@ -67,6 +71,7 @@ profile name: profile_name
             android:paddingLeft="10dp"
 
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:gravity="left"
             android:text="0 Following"/>
     </LinearLayout>
@@ -74,5 +79,5 @@ profile name: profile_name
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"/>
+        android:background="@color/grey"/>
 </LinearLayout>
