--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -1,3 +1,8 @@
+<!--
+create group 4 digit password: create_group_password
+input exception hint: create_group_hint
+ok button: create_group_ok_button
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -5,27 +10,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
     android:orientation="vertical"
+    android:background="@color/dark_grey"
     >
 
     <TextView
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="10dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
 
-        android:text="Enter new password here"
+        android:text="create new group using 4 digits"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
         android:textSize="20dp"
+        android:textColor="@color/grey"
         android:textStyle="bold"
         />
 
     <EditText
-        android:id="@+id/createGroupPass"
+        android:id="@+id/create_group_password"
         android:layout_marginTop="20dp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/rectangle"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
 
@@ -33,34 +39,32 @@
         android:textAlignment="center"
         android:maxLength="4"
         android:hint="ex:1234"
-        android:textSize="50dp"
+        android:textSize="20sp"
         />
 
     <TextView
-        android:id="@+id/createGroupHint"
+        android:id="@+id/create_group_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:text="must be exactly 4 digits"/>
+
+    <Button
+        android:id="@+id/create_group_ok_button"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:textSize="20dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:textColor="#FF0000"
-        />
-
-    <Button
-        android:layout_marginTop="20dp"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
+        android:onClick="createGroupOk"
+        android:background="@drawable/rectangle"
 
         android:text="OK"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        android:background="#F12345"
-        android:fontFamily="sans-serif"
 
-        android:onClick="createGroupOk"
         />
 
 </LinearLayout>
