--- a/app/src/main/res/layout/group_chat.xml
+++ b/app/src/main/res/layout/group_chat.xml
@@ -1,5 +1,5 @@
 <!--
-event list: group_list
+event list: event_list
 create group button: group_create
 join group button: group_join
 -->
@@ -9,7 +9,8 @@ join group button: group_join
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/dark_grey">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@ join group button: group_join
             android:text="Create"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:background="@color/transparent"
             android:onClick="createGroup"
             />
@@ -37,7 +38,7 @@ join group button: group_join
         <TextView
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/black"/>
+            android:background="@color/grey"/>
 
         <TextView
             android:id="@+id/group_join"
@@ -50,7 +51,7 @@ join group button: group_join
             android:text="Join"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:background="@color/transparent"
             android:onClick="joinGroup"
             />
