--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,6 @@
     <color name="white_smoke">#F7F7F7</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="transparent">#00000000</color>
 
     <color name="main_color_green">#00b863</color>
     <color name="main_color_gray_dk">#3b3b3b</color>
@@ -18,4 +17,7 @@
     <color name="grey">#999999</color>
     <color name="sexy_pink">#E0006C</color>
     <color name="light_grey">#EEEEEE</color>
+
+    <color name="transparent">#00FFFFFF</color>
+    <color name="dark_grey">#222222</color>
 </resources>
